# SilentBobWatches

./: .gitignore  CODEDOCUMENTATION.md  Cargo.toml  README.md  codedocumentation.md  install.sh
src/: active.rs  analysis.rs  cli.rs  cve_db.rs  logger.rs  main.rs  models.rs  report.rs  scanner.rs
